# EAG-v1-Assignment-6

./: README.md  action.py  decision.py  main.py  mcp_action_server.py  mcp_client.py  mcp_schemas.py  memory.py  perception.py  pyproject.toml  sub_prompts.py  use_paint_preview_with_mac.py  utils.py
